--- a/docs/operate/index.mdx
+++ b/docs/operate/index.mdx
@@ -1,6 +1,6 @@
 ---
 id: index
-title: Operate a Resonate HQ deployment
+title: Operate a Resonate HQ Server deployment
 sidebar_label: Operate
 ---
 
